envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

# dynamic_resources:
#   lds_config:
#     api_config_source:
#       api_type: GRPC
#       grpc_services:
#         envoy_grpc:
#           cluster_name: xds_cluster
#   cds_config:
#     api_config_source:
#       api_type: GRPC
#       grpc_services:
#         envoy_grpc:
#           cluster_name: xds_cluster

static_resources:
  listeners:
  - name: listener_grpcweb
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: cluster_x-grpc
                  max_grpc_timeout: 0s
              cors:
                allow_origin:
                - "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                max_age: "1728000"
                expose_headers: custom-header-1,grpc-status,grpc-message
                enabled: true
          http_filters:
          - name: envoy.grpc_web
          - name: envoy.cors
          - name: envoy.router
  - name: listener_rabbitmq
    address:
      socket_address: { address: 0.0.0.0, port_value: 10001 }
    filter_chains:
    - filters:
      - name: envoy.tcp_proxy
        config:
          stat_prefix: ingress_tcp
          cluster: cluster_rabbitmq
          access_log:
            - name: envoy.file_access_log
              config:
                path: /dev/stdout
  clusters:
  - name: cluster_x-grpc
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: x-grpc, port_value: 50051 }}]
  - name: cluster_rabbitmq
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    hosts: [{ socket_address: { address: rabbitmq, port_value: 5672 }}]
  # - name: xds_cluster
  #   connect_timeout: 0.25s
  #   type: STATIC
  #   lb_policy: ROUND_ROBIN
  #   http2_protocol_options: {}
  #   load_assignment:
  #     cluster_name: xds_cluster
  #     endpoints:
  #     - lb_endpoints:
  #       - endpoint:
  #           address:
  #             socket_address:
  #               address: 127.0.0.1
  #               port_value: 50051
